--- a/bestbid/bidding/templates/bidding/search.html
+++ b/bestbid/bidding/templates/bidding/search.html
@@ -59,7 +59,7 @@
 					{% endif %}
 
 					{% if no_results %}
-						<h4 style="text-align: center;">No Results Found</h4>
+						<h4 style="text-align: center;">No Assets Found</h4>
 					{% endif %}
 
 				</main>
