--- a/bestbid/bidding/templates/bidding/upload.html
+++ b/bestbid/bidding/templates/bidding/upload.html
@@ -56,22 +56,18 @@
 									<textarea class="form-control" id="exampleTextarea" rows="3" placeholder="Description for the Asset"></textarea>
 								</div>
 								<div class="form-group">
-									<div class="input-group mb-3">
-									<div class="custom-file">
-										<input type="file" class="custom-file-input" id="inputGroupFile02">
-										<label class="custom-file-label" for="inputGroupFile02">Choose file</label>
-									</div>
-									<div class="input-group-append">
-										<span class="input-group-text" id="">Upload</span>
-									</div>
-									</div>
-								</div>
+										<label for="exampleInputFile">Image</label>
+										<input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+								  </div>
 								<div class="form-group">
 									<fieldset>
 									  <label class="control-label" for="readOnlyInput">Seller</label>
 									  <input class="form-control" id="readOnlyInput" type="text" value="{{user.name}}" readonly="">
 									</fieldset>
 								  </div>
+							</div>
+							<div class="form-group">
+								<button type="submit" class="btn btn-primary">Submit</button>
 							</div>
 						</fieldset>
 					</form>
