--- a/bestbid/bidding/templates/bidding/buyer_login.html
+++ b/bestbid/bidding/templates/bidding/buyer_login.html
@@ -10,9 +10,11 @@
 		{% block body %}
 			<div class="container">
 				<main>
-					<h1>Buyer Login</h1>
+					<br>
+					<h1 style="text-align: center;">Buyer Login</h1>
+					<br>
 					<div class="w-50">
-						<form action="{% url 'buyer_login' %}" method="POST">
+						<form action="{% url 'buyer_dashboard' %}" method="POST">
 							{% csrf_token %}
 							{{ form.as_p }}
 							<input type="submit" class="btn btn-primary" value="Submit">
@@ -21,11 +23,12 @@
 					<br>
 					<a href="{% url 'registration' %}"> New to Site ?</a>
 				</main>
+				<br><br>
 				{{ form.errors }}
 				{% if messages %}
 					<ul class="messages">
 						{% for message in messages %}
-						<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+							<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
 						{% endfor %}
 					</ul>
 				{% endif %}
