--- a/bestbid/bidding/templates/bidding/edit_profile.html
+++ b/bestbid/bidding/templates/bidding/edit_profile.html
@@ -17,47 +17,32 @@
 					<br>
 					<h1 style="text-align: center;">Edit Profile</h1>
 					<br>
-					
-					<div class="form-group row">
-						<label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
-						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.name|title }}">
-						</div>
-					</div>
-					<div class="form-group row">
-						<label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.email }}">
-						</div>
-					</div>
-					<div class="form-group row">
-						<label for="staticEmail" class="col-sm-2 col-form-label">Password</label>
-						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.password }}">
-						</div>
-					</div>
-					<br><br><br>
-					<div class="card mb-3">
-						<h3 class="card-header">{{ user.name|title }}</h3>
-						<div class="card-body">
-						  <h5 class="card-title">Special title treatment</h5>
-						  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-						</div>
-						<div class="card-body">
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						<ul class="list-group list-group-flush">
-						  <li class="list-group-item">Cras justo odio</li>
-						  <li class="list-group-item">Dapibus ac facilisis in</li>
-						  <li class="list-group-item">Vestibulum at eros</li>
-						</ul>
-						{% comment %}
-						{% url 'profile' user_type %}
-						{% endcomment %}
-						<div class="card-body">
-							<a href="#" class="card-link">Edit Profile</a>
-						</div>
-					</div>
+					<form>
+						<fieldset>
+							<div class="form-group">
+								<label for="name">Name</label>
+								<input type="text" class="form-control" id="name" name="name" value="{{ user.name }}">
+							</div>
+							<div class="form-group">
+								<label for="email">Email address</label>
+								<input type="email" class="form-control" id="email" name="email" value="{{ user.email }}">
+							</div>
+							<div class="form-group">
+								<label for="password">Password</label>
+								<input type="text" class="form-control" id="password" name="pwd" value="{{ user.password }}">
+							</div>
+							<div class="form-group">
+								<label for="contact">Contact</label>
+								<input type="text" class="form-control" id="contact" name="contact" value="{{ user.contact }}">
+							</div>
+						</fieldset>
+					  </form>
+					<form class="form-inline my-2 my-lg-0" action="#" method="POST">
+						{% csrf_token %}
+						<input type="hidden" name="user_id" value="{{ request.session.id }}">
+						<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
+						<button class="btn btn-primary my-2 my-sm-0">Update Profile</button>
+					</form>
 				</main>
 			</div>
 		{% endblock %}
