--- a/bestbid/bidding/templates/bidding/login.html
+++ b/bestbid/bidding/templates/bidding/login.html
@@ -32,10 +32,14 @@
 				</div>
 			</div>
 			<a href="{% url 'registration' %}">Register</a>
-			
-			{% for msg in messages %}
-				<p id="msg">{{ msg }}</p>
-			{% endfor %}
+			<br><br>
+			{% if messages %}
+					<ul class="messages">
+						{% for message in messages %}
+							<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+						{% endfor %}
+					</ul>
+				{% endif %}
 
 		</main>
 		<br><br>
