--- a/bestbid/bidding/templates/bidding/seller_login.html
+++ b/bestbid/bidding/templates/bidding/seller_login.html
@@ -14,7 +14,7 @@
 					<h1 style="text-align: center;">Seller Login</h1>
 					<br>
 					<div class="w-50">
-						<form action="{% url 'seller_login' %}" method="POST">
+						<form action="{% url 'seller_dashboard' %}" method="POST">
 							{% csrf_token %}
 							{{ form.as_p }}
 							<input type="submit" class="btn btn-primary" value="Submit">
@@ -23,11 +23,12 @@
 					<br>
 					<a href="{% url 'registration' %}"> New to Site ?</a>
 				</main>
+				<br><br>
 				{{ form.errors }}
 				{% if messages %}
 					<ul class="messages">
 						{% for message in messages %}
-						<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+							<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
 						{% endfor %}
 					</ul>
 				{% endif %}
