--- a/bestbid/bidding/templates/bidding/footer.html
+++ b/bestbid/bidding/templates/bidding/footer.html
@@ -1,136 +1,94 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title></title>
-	</head>
-	<body>
-		<br>
-		<hr>
-		<br>
-		<!-- Footer -->
-		<footer class="page-footer font-small indigo">
+<hr>
+<!-- Footer -->
+<footer class="page-footer font-small indigo">
 
-		  <!-- Footer Links -->
-		  <div class="container text-center text-md-left">
+	<!-- Footer Links -->
+	<div class="container text-center text-md-left">
 
-		    <!-- Grid row -->
-		    <div class="row">
+		<!-- Grid row -->
+		<div class="row">
 
-		      <!-- Grid column -->
-		      <div class="col-md-3 mx-auto">
+			<!-- Grid column -->
+			<div class="col-md-4 mx-auto">
 
-		        <!-- Links -->
-		        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+				<!-- Links -->
+				<h5 class="font-weight-bold text-uppercase mt-3 mb-4">Created By</h5>
+				<ul class="list-unstyled">
+					<li>
+						<a href="#">Aarsh Sheth</a>
+					</li>
+					<li>
+						<a href="#">Zarmy Patel</a>
+					</li>
+					<li>
+						<a href="#">Sneha Malla</a>
+					</li>
+				</ul>
 
-		        <ul class="list-unstyled">
-		          <li>
-		            <a href="#!">Very long link 1</a>
-		          </li>
-		          <li>
-		            <a href="#!">Very long link 2</a>
-		          </li>
-		          <li>
-		            <a href="#!">Very long link 3</a>
-		          </li>
-		          <li>
-		            <a href="#!">Very long link 4</a>
-		          </li>
-		        </ul>
+			</div>
+			<!-- Grid column -->
 
-		      </div>
-		      <!-- Grid column -->
+			<hr class="clearfix w-100 d-md-none">
 
-		      <hr class="clearfix w-100 d-md-none">
+			<!-- Grid column -->
+			<div class="col-md-3 mx-auto">
 
-		      <!-- Grid column -->
-		      <div class="col-md-3 mx-auto">
+				<!-- Links -->
+				<h5 class="font-weight-bold text-uppercase mt-3 mb-4">Social</h5>
 
-		        <!-- Links -->
-		        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+				<ul class="list-unstyled">
+					<li>
+						<a href="#">Facebook</a>
+					</li>
+					<li>
+						<a href="#">Instagram</a>
+					</li>
+					<li>
+						<a href="#">Twitter</a>
+					</li>
+				</ul>
 
-		        <ul class="list-unstyled">
-		          <li>
-		            <a href="#!">Link 1</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 2</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 3</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 4</a>
-		          </li>
-		        </ul>
+			</div>
+			<!-- Grid column -->
 
-		      </div>
-		      <!-- Grid column -->
+			<hr class="clearfix w-100 d-md-none">
 
-		      <hr class="clearfix w-100 d-md-none">
+			<!-- Grid column -->
+			<div class="col-md-3 mx-auto">
 
-		      <!-- Grid column -->
-		      <div class="col-md-3 mx-auto">
+				<!-- Links -->
+				<h5 class="font-weight-bold text-uppercase mt-3 mb-4">Navigation</h5>
 
-		        <!-- Links -->
-		        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+				<ul class="list-unstyled">
+					<li>
+						<a href="{% url 'index' %}">Home</a>
+					</li>
+					<li>
+						<a href="{% url 'bid' %}">Bid</a>
+					<li>
+						<a href="{% url 'search' %}">Search</a>
+					</li>
+					<li>
+						<a href="#">About</a>
+					</li>
+				</ul>
 
-		        <ul class="list-unstyled">
-		          <li>
-		            <a href="#!">Link 1</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 2</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 3</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 4</a>
-		          </li>
-		        </ul>
+			</div>
+			<!-- Grid column -->
 
-		      </div>
-		      <!-- Grid column -->
+		<hr class="clearfix w-100 d-md-none">
 
-		      <hr class="clearfix w-100 d-md-none">
+		</div>
+		<!-- Grid row -->
 
-		      <!-- Grid column -->
-		      <div class="col-md-3 mx-auto">
+	</div>
+	<!-- Footer Links -->
 
-		        <!-- Links -->
-		        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">&copy; 2020 Copyright:
+		<a href="http://127.0.0.1:8000/index/"> BestBid.com</a>
+	</div>
+	<!-- Copyright -->
 
-		        <ul class="list-unstyled">
-		          <li>
-		            <a href="#!">Link 1</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 2</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 3</a>
-		          </li>
-		          <li>
-		            <a href="#!">Link 4</a>
-		          </li>
-		        </ul>
-
-		      </div>
-		      <!-- Grid column -->
-
-		    </div>
-		    <!-- Grid row -->
-
-		  </div>
-		  <!-- Footer Links -->
-
-		  <!-- Copyright -->
-		  <div class="footer-copyright text-center py-3">&copy; 2020 Copyright:
-		    <a href="http://127.0.0.1:8000/index/"> BestBid.com</a>
-		  </div>
-		  <!-- Copyright -->
-
-		</footer>
-		<!-- Footer -->
-	</body>
-</html>
+</footer>
+<!-- Footer -->
