--- a/bestbid/bidding/templates/bidding/asset.html
+++ b/bestbid/bidding/templates/bidding/asset.html
@@ -13,14 +13,16 @@
 	<body>
 		<main>
 			{% block body %}
-				<div class="container">
+				<div class="container" style="justify-content: center;">
 					<br>
 					<h2 style="text-align: center;">{{ asset.name }}</h2>
 					<br>
 					<!-- Card for each asset -->
+					{% comment %}
+						
 					<div class="col-sm-6">
 						<div class="card" style="width:700px">
-							<h3 class="card-header"><a href="#">{{ asset.name }}</a></h3>
+							<h3 class="card-header">{{ asset.name }}</h3>
 							<div class="card-body">
 								<h5 class="card-title">{{ asset.category }}</h5>
 							</div>
@@ -29,15 +31,121 @@
 							<div class="card-body">
 								<p class="card-text">{{ asset.details }}</p>
 							</div>
+							
 							<!-- <ul class="list-group list-group-flush">
 								<li class="list-group-item">Sold at : ${{ asset.price }}</li>
 							</ul> -->
 
 							
 							<div class="card-footer text-muted">
-								Seller : {{ asset.seller.name }}
+								Seller : {{ asset.seller.name|title }}
 							</div>
-							
+						</div>
+					</div>
+					
+					{% endcomment %}
+					<br>
+
+					<div class="row asset-details" style="display: inline-flex;">
+						<div class="img-box col-sm-12 col-md-6" style="float: left;">
+							<img src="{{ asset.image.url }}" alt="{{ asset.name }}" style="display: block" width="100%;">
+						</div>
+						<div class="asset-price col-sm-12 col-md-6" style="float: inline-start;">
+							<br>
+							<h4>Baseprice : ${{ asset.baseprice }}</h4>
+							<input type="hidden" name="baseprice" id="baseprice" value="{{ asset.baseprice }}">
+							<br>
+							<h5>Seller : {{ asset.seller|title }}</h5>
+							<br>
+							{% if request.session.user_type == "buyer" %}
+								<div class="form-group ml-10" style="float: inline-end;">
+									<div class="input-group">
+										<div class="input-group-prepend">
+											<span class="input-group-text">$</span>
+										</div>
+										<input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Bid Value" name="bid_value" id="bid_value" min="{{ asset.baseprice }}" required>
+										<div class="input-group-append">
+											<form action="{% url 'place_bid' %}" method="post">
+												{% csrf_token %}
+												<input type="hidden" name="user_id" value="{{ request.session.id }}">
+												<button class="btn btn-primary" type="submit" id="bid_btn">Place Bid</button>
+											</form>
+										</div>
+									</div>
+								</div>
+							{% endif %}
+						</div>
+						<br>
+					</div>
+					<br><br>
+					<div class="card">
+						<h3 class="card-header">Asset Description</h3>
+						<div class="card-body">{{ asset.details }}</div>
+					</div>
+					<br>
+					<button type="button" class="btn btn-lg btn-info" onclick="location.reload(true);">Reload page</button>
+					<br><br>
+					<div class="bid" style="justify-content: center;">
+						<table class="table table-hover w-50">
+							<thead>
+								<tr>
+									<th scope="col">Type</th>
+									<th scope="col">Column heading</th>
+									<th scope="col">Column heading</th>
+									<th scope="col">Column heading</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr class="table">
+									<th scope="row">Active</th>
+									<td>Column content</td>
+									<td>Column content</td>
+									<td>Column content</td>
+								</tr>
+							</tbody>
+						</table>
+
+					</div>
+					
+					<!-- Delete Button -->
+					{% if request.session.id == asset.seller.id %}
+						{% if request.session.user_type == "seller" %}
+							<button type="submit" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#delete">Delete</button>
+							<br><br>
+							<form action="{% url 'asset' asset.id 'edit' %}" method="post">
+								{% csrf_token %}
+								<input type="hidden" name="user_id" value="{{ request.session.id }}">
+										<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
+										<input type="hidden" name="edit" value="edit">
+								<button class="btn btn-info btn-lg">Edit</button>
+							</form>
+						{% endif %}
+					{% endif %}
+				</div>
+				
+				<!-- Confirm Delete Modal -->
+				<div class="modal modal-danger fade" id="delete">
+					<div class="modal-dialog " role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">Confirm Delete</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<p>Are you sure to delete the asset : {{ asset.name }} ?</p>
+							</div>
+							<div class="modal-footer">
+								<form action="{% url 'asset' asset.id %}" method="POST">
+									{% csrf_token %}
+										<input type="hidden" name="user_id" value="{{ request.session.id }}">
+										<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
+										<input type="hidden" name="delete" value="delete">
+										<button class="btn btn-danger ">Delete</button>
+								</form>
+								<button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+							</div>
 						</div>
 					</div>
 				</div>
