--- a/bestbid/bidding/templates/bidding/buyer_reg.html
+++ b/bestbid/bidding/templates/bidding/buyer_reg.html
@@ -13,14 +13,17 @@
 		{% block body %}
 			<div class="container">
 				<main>
-					<h1>Buyer Registration</h1>
+					<br>
+					<h1 style="text-align: center;">Buyer Registration</h1>
+					<br>
+					<div class="w-50">
+						<form action="{% url 'buyer_reg' %}" method="POST">
+							{% csrf_token %}
+							{{ form.as_p }}
 					
-					<form action="{% url 'buyer_reg' %}" method="POST">
-						{% csrf_token %}
-						{{ form.as_p }}
-				
-						<input type="submit" class="btn btn-primary" value="Submit">
-					</form>
+							<input type="submit" class="btn btn-primary" value="Submit">
+						</form>
+					</div>
 				</main>
 				{{ form.errors }}
 				{% if messages %}
