--- a/bestbid/bidding/templates/bidding/edit_asset.html
+++ b/bestbid/bidding/templates/bidding/edit_asset.html
@@ -15,16 +15,16 @@
 			<div class="container w-50">
 				<main>
 					<br>
-					<h1 style="text-align: center;">Upload an Asset</h1>
+					<h1 style="text-align: center;">Edit Asset</h1>
 					<br>
 				
-					<form action="{% url 'upload' %}" method="POST" enctype="multipart/form-data">
+					<form action="{% url 'edit_asset' %}" method="POST" enctype="multipart/form-data">
 						{% csrf_token %}
 						<fieldset>
 							<div class="form">
 								<div class="form-group">
 									<label class="col-form-label" for="name">Name</label>
-									<input type="text" class="form-control" placeholder="Name of the Asset" id="name" name="name">
+									<input type="text" class="form-control" placeholder="Name of the Asset" id="name" name="name" value="{{ asset.name }}">
 								</div>
 								<div class="form-group">
 									<label class="control-label">Baseprice</label>
@@ -33,54 +33,42 @@
 											<div class="input-group-prepend">
 												<span class="input-group-text">$</span>
 											</div>
-											<input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Baseprice of the Asset" name="baseprice">
+											<input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Baseprice of the Asset" name="baseprice" value="{{ asset.baseprice }}">
 											<div class="input-group-append">
 												<span class="input-group-text">.00</span>
 											</div>
 										</div>
 									</div>
 								</div>
-								{% comment %}
-									
-									<div class="form-group">
-										<div class="custom-control custom-radio">
-											<input type="radio" class="custom-control-input" checked="">
-											<label class="custom-control-label" for="radioCar">Car</label>
-										</div>
-										<div class="custom-control custom-radio">
-											<input type="radio" class="custom-control-input">
-											<label class="custom-control-label" for="radioHouse">House</label>
-										</div>
-									</div>
-
-								{% endcomment %}
-
 								<div class="form-group">
 									<label for="selectOption">Category</label>
 									<select class="custom-select" id="selectedOption" name="selectedOption">
-									  <option selected value="car">Car</option>
-									  <option value="house">House</option>
+											{% if asset.category == 'car' %}
+												<option selected value="car">Car</option>
+												<option value="house">House</option>
+											{% else %}
+												<option value="car">Car</option>
+												<option selected value="house">House</option>
+											{% endif %}
 									</select>
-								  </div>
+								</div>
 								<div class="form-group">
 									<label for="description">Description</label>
-									<textarea class="form-control" id="description" rows="3" placeholder="Description for the Asset" name="description"></textarea>
+									<textarea class="form-control" id="description" rows="3" placeholder="Description for the Asset" name="description">{{ asset.details }}</textarea>
 								</div>
 								<div class="form-group">
 										<label for="exampleInputFile">Image</label>
-										<input type="file" class="form-control-file" aria-describedby="imageHelp" name="image">
+										<input type="file" class="form-control-file" aria-describedby="imageHelp" name="image" value="{{ asset.image.url }}">
 								</div>
 								<div class="form-group">
-									<fieldset>
-										<label class="control-label" for="{{ user.name }}">Seller</label>
-										<input class="form-control" id="{{ user.name }}" type="text" value="{{ user.name }}" readonly="" name="user_name">
-									</fieldset>
+										<label class="control-label" for="{{ asset.seller.name }}">Seller</label>
+										<input class="form-control" id="{{ asset.seller.name }}" type="text" value="{{ asset.seller.name }}" readonly="" name="user_name">
 								  </div>
 							</div>
 							<input type="hidden" name="user_id" value="{{ request.session.id }}">
 							<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
 							<div class="form-group">
-								<button class="btn btn-primary">Submit</button>
+								<button class="btn btn-primary">Update</button>
 							</div>
 						</fieldset>
 					</form>
