--- a/bestbid/bidding/templates/bidding/home.html
+++ b/bestbid/bidding/templates/bidding/home.html
@@ -14,6 +14,9 @@
 		<main>
 			{% block body %}
 				<div class="container">
+					<br>
+					<h1 style="text-align: center;">Welcome Admin</h1>
+					<br>
 					<table class="table table-hover w-50">
 						<thead>
 							<tr>
@@ -21,6 +24,8 @@
 								<th scope="col">Name</th>
 								<th scope="col">Email</th>
 								<th scope="col">Contact</th>
+								<th scope="col">Update</th>
+								<th scope="col">Delete</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -30,8 +35,8 @@
 									<td>{{ buyer.name }}</td>
 									<td>{{ buyer.email }}</td>
 									<td>{{ buyer.contact }}</td>
-									<td><a class="btn btn-sm btn-info" href="">Update</a></td> 
-									<td><a class="btn btn-sm btn-danger" href="">Delete</a></td> 
+									<td><a class="btn btn-sm btn-info" href="#">Update</a></td> 
+									<td><a class="btn btn-sm btn-danger" href="#">Delete</a></td> 
 								</tr>
 							{% endfor %}
 						</tbody>
@@ -43,6 +48,8 @@
 								<th scope="col">Name</th>
 								<th scope="col">Email</th>
 								<th scope="col">Contact</th>
+								<th scope="col">Update</th>
+								<th scope="col">Delete</th>
 						</thead>
 						<tbody>
 							{% for seller in sellers %}
@@ -51,8 +58,8 @@
 									<td>{{ seller.name }}</td>
 									<td>{{ seller.email }}</td>
 									<td>{{ seller.contact }}</td>
-									<td><a class="btn btn-sm btn-info" href="">Update</a></td> 
-									<td><a class="btn btn-sm btn-danger" href="">Delete</a></td> 
+									<td><a class="btn btn-sm btn-info" href="#">Update</a></td> 
+									<td><a class="btn btn-sm btn-danger" href="#">Delete</a></td> 
 								</tr>
 							{% endfor %}
 						</tbody>
@@ -65,6 +72,8 @@
 								<th scope="col">Baseprice</th>
 								<th scope="col">Category</th>
 								<th scope="col">Seller</th>
+								<th scope="col">Update</th>
+								<th scope="col">Delete</th>
 						</thead>
 						<tbody>
 							{% for asset in assets %}
@@ -74,8 +83,8 @@
 									<td>{{ asset.baseprice }}</td>
 									<td>{{ asset.category }}</td>
 									<td>{{ asset.seller.name }}</td>
-									<td><a class="btn btn-sm btn-info" href="">Update</a></td> 
-									<td><a class="btn btn-sm btn-danger" href="">Delete</a></td> 
+									<td><a class="btn btn-sm btn-info" href="#">Update</a></td> 
+									<td><a class="btn btn-sm btn-danger" href="#">Delete</a></td> 
 								</tr>
 							{% endfor %}
 						</tbody>
@@ -89,6 +98,8 @@
 								<th scope="col">Category</th>
 								<th scope="col">Seller</th>
 								<th scope="col">Buyer</th>
+								<th scope="col">Update</th>
+								<th scope="col">Delete</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -100,8 +111,8 @@
 									<td>{{ auctionedAsset.category }}</td>
 									<td>{{ auctionedAsset.seller.name }}</td>
 									<td>{{ auctionedAsset.buyer.name }}</td>
-									<td><a class="btn btn-sm btn-info" href="">Update</a></td> 
-									<td><a class="btn btn-sm btn-danger" href="">Delete</a></td> 
+									<td><a class="btn btn-sm btn-info" href="#">Update</a></td> 
+									<td><a class="btn btn-sm btn-danger" href="#">Delete</a></td> 
 								</tr>
 							{% endfor %}
 						</tbody>
@@ -113,6 +124,8 @@
 								<th scope="col">Name</th>
 								<th scope="col">Category</th>
 								<th scope="col">Date</th>
+								<th scope="col">Update</th>
+								<th scope="col">Delete</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -122,8 +135,8 @@
 									<td>{{ auction.asset }}</td>
 									<td>{{ auction.category }}</td>
 									<td>{{ auction.date }}</td>
-									<td><a class="btn btn-sm btn-info" href="">Update</a></td> 
-									<td><a class="btn btn-sm btn-danger" href="">Delete</a></td> 
+									<td><a class="btn btn-sm btn-info" href="#">Update</a></td> 
+									<td><a class="btn btn-sm btn-danger" href="#">Delete</a></td> 
 								</tr>
 							{% endfor %}
 						</tbody>
