--- a/bestbid/bidding/templates/bidding/seller_reg.html
+++ b/bestbid/bidding/templates/bidding/seller_reg.html
@@ -13,13 +13,16 @@
 		{% block body %}
 			<div class="container">
 				<main>
-					<h1>Seller Registration</h1>
-					
-					<form action="{% url 'seller_reg' %}" method="POST">
-						{% csrf_token %}
-						{{ form.as_p }}
-						<input type="submit" class="btn btn-primary" value="Submit">
-					</form>
+					<br>
+					<h1 style="text-align: center;">Seller Registration</h1>
+					<br>
+					<div class="w-50">
+						<form action="{% url 'seller_reg' %}" method="POST">
+							{% csrf_token %}
+							{{ form.as_p }}
+							<input type="submit" class="btn btn-primary" value="Submit">
+						</form>
+					</div>
 				</main>
 				{{ form.errors }}
 				{% if messages %}
