--- a/bestbid/bidding/templates/bidding/show_profile.html
+++ b/bestbid/bidding/templates/bidding/show_profile.html
@@ -19,9 +19,9 @@
 					<br>
 					
 					<div class="form-group row">
-						<label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
+						<label for="staticName" class="col-sm-2 col-form-label">Name</label>
 						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.name|title }}">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticName" value="{{ user.name|title }}">
 						</div>
 					</div>
 					<div class="form-group row">
@@ -31,44 +31,35 @@
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="staticEmail" class="col-sm-2 col-form-label">Password</label>
+						<label for="staticUserType" class="col-sm-2 col-form-label">User Type</label>
 						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.password }}">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticUserType" value="{{ request.session.user_type|title }}">
 						</div>
 					</div>
 
-					<form class="form-inline my-2 my-lg-0" action="{% url 'profile' request.session.user_type request.session.id 'edit' %}" method="POST">
-						{% csrf_token %}
+					{% comment %}	
+						<form class="form-inline my-2 my-lg-0" action="{% url 'profile' request.session.user_type request.session.id 'edit' %}" method="POST">
+					{% endcomment %}
+
+					<form class="form-inline my-2 my-lg-0" action="edit/" method="POST">
+					{% csrf_token %}
 						<input type="hidden" name="user_id" value="{{ request.session.id }}">
 						<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
-						<button class="btn btn-success my-2 my-sm-0">Edit Profile</button>
+						<button class="btn btn-info my-2 my-sm-0">Edit Profile</button>
 					</form>
 					
-					{% comment %}
-						<a href="{% url '' %}">DashBoard</a>
-					{% endcomment %}
 					<br><br><br>
-					<div class="card mb-3">
-						<h3 class="card-header">{{ user.name|title }}</h3>
-						<div class="card-body">
-							<h5 class="card-title">Special title treatment</h5>
-							<h6 class="card-subtitle text-muted">Support card subtitle</h6>
-						</div>
-						<div class="card-body">
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Cras justo odio</li>
-							<li class="list-group-item">Dapibus ac facilisis in</li>
-							<li class="list-group-item">Vestibulum at eros</li>
-						</ul>
-						{% comment %}
-						{% url 'profile' user_type %}
-						{% endcomment %}
-						<div class="card-body">
-							<a href="#" class="card-link">Edit Profile</a>
-						</div>
-					</div>
+					<h4>
+						{% if request.session.user_type == 'seller' %}
+							Assets Uploaded : {{ user_assets.count }}
+							<br>
+							Assets Sold : {{ assets_sold.count }}
+						{% endif %}
+						
+						{% if request.session.user_type == 'buyer' %}
+							Assets Bought : {{ assets_bought.count }}
+						{% endif %}
+					</h4>
 				</main>
 			</div>
 		{% endblock %}
